--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "author": "Erik Patrik Pittaluga",
     "license": "ISC",
     "dependencies": {
+        "@types/body-parser": "^1.19.5",
         "@types/express": "^4.17.21",
+        "body-parser": "^1.20.2",
         "express": "^4.18.2",
         "typescript": "^5.3.3"
     },
