--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "dev": "nodemon --exec ts-node-dev --inspect --transpile-only --ignore node_modules src/server/express/server.ts",
-        "start": "nodemon --exec ts-node src/server/express/server.ts",
+        "dev": "nodemon --exec ts-node-dev --inspect --transpile-only --ignore node_modules src/app.ts",
+        "start": "nodemon --exec ts-node src/app.ts",
         "lint": "eslint src/**/*.ts --fix"
     },
     "author": "Erik Patrik Pittaluga",
     "license": "ISC",
     "dependencies": {
         "@types/body-parser": "^1.19.5",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
         "body-parser": "^1.20.2",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "typescript": "^5.3.3"
     },
