--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
         "@types/body-parser": "^1.19.5",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
+        "@types/mongoose": "^5.11.97",
         "body-parser": "^1.20.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "mongodb": "^6.3.0",
+        "mongoose": "^8.0.4",
         "typescript": "^5.3.3"
     },
     "devDependencies": {
